Feat(eos_cli_config_gen): Add support for switchport port-security

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -155,6 +155,7 @@ spanning-tree-bpdu
 spanning-tree-rstp
 spanning-tree-rapid-pvst
 switchport-mode
+switchport-port-security
 stun
 tcam-profile
 static-routes
