--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -14229,6 +14229,20 @@ keys:
             - str
             min: 1
             max: 4094
+  switchport_port_security:
+    type: dict
+    keys:
+      mac_address:
+        type: dict
+        keys:
+          aging:
+            type: bool
+          moveable:
+            type: bool
+      persistence_disabled:
+        type: bool
+      violation_protect_chip_based:
+        type: bool
   system:
     type: dict
     keys:
