Implement switchport port-security in ethernet interface

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -66,6 +66,13 @@ ethernet_interfaces:
           no_drop: true
     spanning_tree_bpduguard: disabled
     spanning_tree_bpdufilter: disabled
+    switchport:
+      port_security:
+        mac_address_maximum:
+          limit: 100
+        violation:
+          protect:
+            log: true
 
   - name: Ethernet3
     peer: DC1-SPINE2
