--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -35,6 +35,8 @@ interface Ethernet2
    multicast ipv4 boundary ACL_MULTICAST
    multicast ipv6 boundary ACL_V6_MULTICAST out
    multicast ipv4 static
+   switchport port-security violation protect log
+   switchport port-security mac-address maximum 100
    priority-flow-control on
    priority-flow-control priority 5 no-drop
    storm-control all level 10
