--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ethernet_interfaces.schema.yml
@@ -1256,7 +1256,7 @@ keys:
             port_security:
               type: dict
               keys:
-                enable:
+                enabled:
                   type: bool
                 mac_address_maximum:
                   type: dict
@@ -1280,7 +1280,7 @@ keys:
                       type: dict
                       description: Configure port security in protect mode.
                       keys:
-                        enable:
+                        enabled:
                           type: bool
                         log:
                           type: bool
