--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -72,6 +72,7 @@ ethernet_interfaces:
           limit: 100
         violation:
           protect:
+            enabled: true
             log: true
 
   - name: Ethernet3
