--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -104,6 +104,11 @@ ethernet_interfaces:
     priority_flow_control:
       enabled: false
     spanning_tree_guard: root
+    switchport:
+      port_security:
+        vlan:
+          id: 1-3
+          mac_address_maximum: 3
 
   - name: Ethernet4
     type: routed
