--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3104,7 +3104,8 @@ keys:
                       description: MAC address limit.
                 violation:
                   type: dict
-                  description: Configure violation mode (shutdown or protect).
+                  description: Configure violation mode (shutdown or protect), default
+                    is 'shutdown'.
                   keys:
                     protect:
                       type: dict
@@ -3116,9 +3117,26 @@ keys:
                           type: bool
                           description: Log new addresses seen after limit is reached
                             in protect mode.
-                    shutdown:
-                      type: bool
-                      description: Configure port security in shutdown mode.
+                vlan:
+                  type: dict
+                  keys:
+                    default_mac_address_maximum:
+                      type: int
+                      convert_types:
+                      - str
+                      min: 0
+                      max: 1000
+                      description: Select all VLAN on this interface.
+                    id:
+                      type: str
+                      convert_types:
+                      - int
+                      description: "VLAN ID or range(s) of VLAN IDs, <1-4094>.\nExample:\n
+                        \ - 3\n  - 1,3\n  - 1-10\n"
+                    mac_address_maximum:
+                      type: int
+                      convert_types:
+                      - str
         eos_cli:
           type: str
           description: Multiline EOS CLI rendered directly on the ethernet interface
