--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -106,9 +106,10 @@ ethernet_interfaces:
     spanning_tree_guard: root
     switchport:
       port_security:
-        vlan:
-          id: 1-3
-          mac_address_maximum: 3
+        vlan_default_mac_address_maximum: 2
+        vlans:
+          - range: 1-3
+            mac_address_maximum: 3
 
   - name: Ethernet4
     type: routed
