--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3094,7 +3094,7 @@ keys:
                     disabled:
                       type: bool
                       description: Disable port level check for port security (only
-                        in shutdown mode).
+                        in violation 'shutdown' mode).
                     limit:
                       type: int
                       convert_types:
@@ -3117,26 +3117,30 @@ keys:
                           type: bool
                           description: Log new addresses seen after limit is reached
                             in protect mode.
-                vlan:
-                  type: dict
-                  keys:
-                    default_mac_address_maximum:
-                      type: int
-                      convert_types:
-                      - str
-                      min: 0
-                      max: 1000
-                      description: Select all VLAN on this interface.
-                    id:
-                      type: str
-                      convert_types:
-                      - int
-                      description: "VLAN ID or range(s) of VLAN IDs, <1-4094>.\nExample:\n
-                        \ - 3\n  - 1,3\n  - 1-10\n"
-                    mac_address_maximum:
-                      type: int
-                      convert_types:
-                      - str
+                vlan_default_mac_address_maximum:
+                  type: int
+                  convert_types:
+                  - str
+                  min: 0
+                  max: 1000
+                  description: Default maximum MAC addresses for all VLANs on this
+                    interface.
+                vlans:
+                  type: list
+                  primary_key: range
+                  items:
+                    type: dict
+                    keys:
+                      range:
+                        type: str
+                        convert_types:
+                        - int
+                        description: "VLAN ID or range(s) of VLAN IDs, <1-4094>.\nExample:\n
+                          \ - 3\n  - 1,3\n  - 1-10\n"
+                      mac_address_maximum:
+                        type: int
+                        convert_types:
+                        - str
         eos_cli:
           type: str
           description: Multiline EOS CLI rendered directly on the ethernet interface
