--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -29,6 +29,9 @@ ethernet_interfaces:
     bgp:
       session_tracker: ST1
     ip_verify_unicast_source_reachable_via: rx
+    switchport:
+      port_security:
+        enabled: true
     eos_cli: |
       comment
       Comment created from eos_cli under ethernet_interfaces.Ethernet1
@@ -71,9 +74,8 @@ ethernet_interfaces:
         mac_address_maximum:
           limit: 100
         violation:
-          protect:
-            enabled: true
-            log: true
+          mode: protect
+          protect_log: true
 
   - name: Ethernet3
     peer: DC1-SPINE2
@@ -106,6 +108,8 @@ ethernet_interfaces:
     spanning_tree_guard: root
     switchport:
       port_security:
+        violation:
+          mode: shutdown
         vlan_default_mac_address_maximum: 2
         vlans:
           - range: 1-3
