Feat(eos_cli_config_gen): Add FIPS and hostkey.client features to management_ssh

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-ssh.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-ssh.yml
@@ -15,3 +15,6 @@ management_ssh:
   client_alive:
     count_max: 42
     interval: 666
+  hostkey:
+    client_strict_checking: true
+  fips_restrictions: true
