--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/management_ssh.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/management_ssh.schema.yml
@@ -58,6 +58,9 @@ keys:
         type: list
         items:
           type: str
+      fips_restrictions:
+        type: bool
+        description: Use FIPS compliant algorithms.
       hostkey:
         type: dict
         keys:
@@ -66,6 +69,9 @@ keys:
             type: list
             items:
               type: str
+          client_strict_checking:
+            type: bool
+            description: Enforce strict host key checking.
       enable:
         description: Enable SSH daemon
         type: bool
