Modifying hostkey.server schema and template

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-ssh-custom-cipher.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/management-ssh-custom-cipher.yml
@@ -10,8 +10,10 @@ management_ssh:
     - hmac-sha2-512-etm@openssh.com
   hostkey:
     server:
-      - ecdsa-nistp256
-      - ecdsa-nistp521
+      cert_key: <switch's cert key>
+      algorithm:
+        - ecdsa-nistp256
+        - ecdsa-nistp521
   access_groups:
     - name: ACL-SSH
     - name: ACL-SSH-VRF
