--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-ssh-custom-cipher.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-ssh-custom-cipher.cfg
@@ -21,6 +21,7 @@ management ssh
    key-exchange ecdh-sha2-nistp521
    mac hmac-sha2-512 hmac-sha2-512-etm@openssh.com
    hostkey server ecdsa-nistp256 ecdsa-nistp521
+   hostkey server cert <switch's cert key>
    no shutdown
    !
    vrf mgt
