changed task name

--- a/ansible_collections/arista/avd/molecule/deploy_to_cv/converge.yml
+++ b/ansible_collections/arista/avd/molecule/deploy_to_cv/converge.yml
@@ -236,7 +236,7 @@
         return_details: true
       register: CVP_STRICT_TAGS_RESULTS
 
-    - name: Get Device Tag information
+    - name: Get Strict Device Tag information
       delegate_to: localhost
       run_once: true
       ansible.builtin.uri:
