Adding no switchport port-security mac-address maximum disabled

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -108,6 +108,8 @@ ethernet_interfaces:
     spanning_tree_guard: root
     switchport:
       port_security:
+        mac_address_maximum:
+          disabled: false
         violation:
           mode: shutdown
         vlan_default_mac_address_maximum: 2
